add run build
