# src/docs/swagger.json
@@ -70,14 +70,79 @@
         "type": "object",
         "additionalProperties": true
       },
-      "IReservationListItemResponse": {
+      "ReservationForHost": {
+        "properties": {
+          "reservationId": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string",
+            "enum": ["walking in", "in house", "checked out"]
+          },
+          "hostel_id": {
+            "type": "string"
+          },
+          "guest": {
+            "properties": {
+              "photo": {
+                "type": "string"
+              },
+              "phone": {
+                "type": "string"
+              },
+              "email": {
+                "type": "string"
+              },
+              "username": {
+                "type": "string"
+              },
+              "_id": {
+                "type": "string"
+              }
+            },
+            "required": ["photo", "phone", "email", "username", "_id"],
+            "type": "object"
+          },
+          "room": {
+            "type": "string"
+          },
+          "bed": {
+            "type": "string"
+          },
+          "checkin_date": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "checkout_date": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "checkout_processed_at": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "required": [
+          "reservationId",
+          "status",
+          "hostel_id",
+          "guest",
+          "room",
+          "bed",
+          "checkin_date",
+          "checkout_date"
+        ],
+        "type": "object",
+        "additionalProperties": true
+      },
+      "IReservationsForHostResponse": {
         "properties": {
           "success": {
             "type": "boolean"
           },
           "data": {
             "items": {
-              "$ref": "#/components/schemas/IReservationDocument"
+              "$ref": "#/components/schemas/ReservationForHost"
             },
             "type": "array"
           },
@@ -256,6 +321,25 @@
               }
             ],
             "nullable": true
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": ["success", "message"],
+        "type": "object",
+        "additionalProperties": true
+      },
+      "IReservationListItemResponse": {
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "data": {
+            "items": {
+              "$ref": "#/components/schemas/IReservationDocument"
+            },
+            "type": "array"
           },
           "message": {
             "type": "string"
@@ -543,7 +627,8 @@
             "items": {
               "$ref": "#/components/schemas/IEventListItem"
             },
-            "type": "array"
+            "type": "array",
+            "nullable": true
           },
           "message": {
             "type": "string"
@@ -604,44 +689,6 @@
         "type": "object",
         "additionalProperties": true
       },
-      "IUserDocument": {
-        "$ref": "#/components/schemas/mongoose.FlattenMaps_mongoose.Default__v_mongoose.Require_id_DocType___"
-      },
-      "IVerifyCodeResponse": {
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "enum": [true],
-            "nullable": false
-          },
-          "data": {
-            "$ref": "#/components/schemas/IUserDocument"
-          },
-          "message": {
-            "type": "string"
-          }
-        },
-        "required": ["success", "message", "data"],
-        "type": "object",
-        "additionalProperties": true
-      },
-      "IVerifyEmailCodeDTO": {
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "code": {
-            "type": "string"
-          },
-          "role": {
-            "type": "string",
-            "enum": ["guest", "host"]
-          }
-        },
-        "required": ["email", "code", "role"],
-        "type": "object",
-        "additionalProperties": true
-      },
       "IUserDTO": {
         "properties": {
           "role": {
@@ -671,6 +718,41 @@
           }
         },
         "required": ["role", "name", "email", "isNewUser", "_id"],
+        "type": "object",
+        "additionalProperties": true
+      },
+      "IVerifyCodeResponse": {
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "enum": [true],
+            "nullable": false
+          },
+          "data": {
+            "$ref": "#/components/schemas/IUserDTO"
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": ["success", "message", "data"],
+        "type": "object",
+        "additionalProperties": true
+      },
+      "IVerifyEmailCodeDTO": {
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "code": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string",
+            "enum": ["guest", "host"]
+          }
+        },
+        "required": ["email", "code", "role"],
         "type": "object",
         "additionalProperties": true
       },
@@ -771,7 +853,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/IReservationListItemResponse"
+                  "$ref": "#/components/schemas/IReservationsForHostResponse"
                 }
               }
             }
